--- a/ControleMedicamentos.Dominio.Tests/ControleMedicamentos.Dominio.Tests.csproj
+++ b/ControleMedicamentos.Dominio.Tests/ControleMedicamentos.Dominio.Tests.csproj
@@ -7,15 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ModuloFornecedor\**" />
     <Compile Remove="ModuloFuncionario\**" />
     <Compile Remove="ModuloPaciente\**" />
     <Compile Remove="ModuloRequisicao\**" />
-    <EmbeddedResource Remove="ModuloFornecedor\**" />
     <EmbeddedResource Remove="ModuloFuncionario\**" />
     <EmbeddedResource Remove="ModuloPaciente\**" />
     <EmbeddedResource Remove="ModuloRequisicao\**" />
-    <None Remove="ModuloFornecedor\**" />
     <None Remove="ModuloFuncionario\**" />
     <None Remove="ModuloPaciente\**" />
     <None Remove="ModuloRequisicao\**" />
@@ -32,6 +29,10 @@
   <ItemGroup>
     <ProjectReference Include="..\ControleMedicamentos.Dominio\ControleMedicamentos.Dominio.csproj" />
     <ProjectReference Include="..\ControleMedicamentos.Infra.BancoDados\ControleMedicamentos.Infra.BancoDados.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ModuloFornecedor\" />
   </ItemGroup>
 
 </Project>
