--- a/ControleMedicamentos.Infra.BancoDados.Tests/ControleMedicamentos.Infra.BancoDados.Tests.csproj
+++ b/ControleMedicamentos.Infra.BancoDados.Tests/ControleMedicamentos.Infra.BancoDados.Tests.csproj
@@ -7,15 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ModuloFornecedor\**" />
     <Compile Remove="ModuloFuncionario\**" />
     <Compile Remove="ModuloPaciente\**" />
     <Compile Remove="ModuloRequisicao\**" />
-    <EmbeddedResource Remove="ModuloFornecedor\**" />
     <EmbeddedResource Remove="ModuloFuncionario\**" />
     <EmbeddedResource Remove="ModuloPaciente\**" />
     <EmbeddedResource Remove="ModuloRequisicao\**" />
-    <None Remove="ModuloFornecedor\**" />
     <None Remove="ModuloFuncionario\**" />
     <None Remove="ModuloPaciente\**" />
     <None Remove="ModuloRequisicao\**" />
@@ -27,6 +24,14 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ControleMedicamentos.Infra.BancoDados\ControleMedicamentos.Infra.BancoDados.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ModuloFornecedor\" />
   </ItemGroup>
 
 </Project>
